--- a/_posts/2019-12-29-the-us-narrative-today.html
+++ b/_posts/2019-12-29-the-us-narrative-today.html
@@ -1581,5 +1581,108 @@ stories:
   state: Nebraska
   domain: http://www.norfolkdailynews.com/
   link: https://norfolkdailynews.com/news/should-seat-belt-laws-be-addressed-as-fatal-crashes-rise/article_601ba682-1e77-5e71-b93f-3b22e14f5e73.html
+images:
+- name: fast-lights-freeway-redes-fast-flux-623x425-monet-one.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-monet-one.jpg
+- name: copper-circuit-seattle-waterfront-ferris-wheel.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-seattle-waterfront-ferris-wheel.jpg
+- name: walled-garden-walled-garden-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-pablo-blue.jpg
+- name: machine-road-machine-road-monet-one.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-monet-one.jpg
+- name: trucksilo-trucksilo-colorful-dream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-colorful-dream.jpg
+- name: scream-IMG_6408.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/scream-IMG_6408.jpg
+- name: locked-up-steam-lock-up-steam-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-bright-sand.jpg
+- name: power-lines-power-lines-empty-space-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-sunday.jpg
+- name: legal-statue-legalstatue-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-purple-storm.jpg
+- name: nyc-flag-nycflag-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-plentiful.jpg
+- name: server-cloud-server-racks-clouds-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-smooth-ride.jpg
+- name: oldhousecars-house-old-cars-ww2-color.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-ww2-color.jpg
+- name: downtown-los-angeles-downtown-la-hot-spicy.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-hot-spicy.JPG
+- name: bordercrossing-bordercrossing-space-pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-space-pizza.jpg
+- name: border-fence-border-fence-on-hill-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-gred-mash.jpg
+- name: fence-fence-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-light-dali.jpg
+- name: downtown-fredericksburg-downtown-fredericksburg-spagetti-accident.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-spagetti-accident.JPG
+- name: aws-s3-stories-beach-rocks-currents-feed-people.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-beach-rocks-currents-feed-people.jpg
+- name: liberty-back-statue-liberty-back-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-emily-carr.jpg
+- name: subway-subway-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-rainbow-festival.jpg
+- name: oldroad-old-road-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-creativity.jpg
+- name: two-sattelite-dishes-norman-rockwell-ruby-bridges.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/two-sattelite-dishes-norman-rockwell-ruby-bridges.jpg
+- name: white-house-whitehouse-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-dark-soul.jpg
+- name: eduardo-eduardo-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-smoking-cigarette.jpg
+- name: oldhouse-granaryfield-wols.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-wols.jpg
+- name: copper-circuit-container-ship-in-seattle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-container-ship-in-seattle.jpg
+- name: white-house-lawn-white-house-lawn-colorful-dream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-colorful-dream.jpg
+- name: store-on-corner-oldcabin-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-smooth-ride.jpg
+- name: abe-lincoln-one-wols-file-00-00-00-00.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-wols-file-00-00-00-00.jpg
+- name: white-house-lawn-white-house-window-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-graham-sutherland.jpg
+- name: san-francisco-city-bridge-sf-city-bridge-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-sunday.jpg
+- name: liberty-back-statue-liberty-back-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-dark-dali.jpg
+- name: amusement-park-amusement-park-2-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-gred-mash.jpg
+- name: school-clouds-church-clouds-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-cinnamon-rolls.jpg
+- name: containership-containership-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-pablo-blue.jpg
+- name: christianity-christianity-under-construction-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-colored-circuits.jpg
+- name: old-granary-field-granaryfield-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-umberto-bocc.jpg
+- name: nazi-invasion-memorial-to-the-jews-in-berlin-2.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-memorial-to-the-jews-in-berlin-2.jpg
+- name: razorcliff-razorcliff-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-neo-instinct.jpg
+- name: gypsymosaic-gypsy-eyes-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-cinnamon-rolls.jpg
+- name: adam-smith-adam-smith-copper-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-copper-circuit.jpg
+- name: old-gas-pumps-oldgaspumps-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-bright-sand.jpg
+- name: nazi-invasion-adam-smith-edinburgh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-adam-smith-edinburgh.jpg
+- name: catacombs-catacombs-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-satan-red.jpg
+- name: blossombar-dry-skin-file-00-00-00-00.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-dry-skin-file-00-00-00-00.jpg
+- name: art-museum-art-museum-attack-planes.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-attack-planes.jpg
+- name: dragon-desert-desert-dragon-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-atari-missle.jpg
+- name: white-house-whitehouse-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-atari-asteroids.jpg
+- name: supreme-court-supremecourt-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-colored-circuits.jpg
+- name: razorcliff-razorcliff-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-smooth-ride.jpg
+- name: old-school-house-old-schoolhouse-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-blue-brush.jpg
 ---
 Mild Weekend Will Precede Threat Of Ice Storms Monday.&nbsp;Man Works To Restore Historic African American Cemetery.&nbsp;Home For The Holidays.&nbsp;Commissioners Approve December Payday.&nbsp;Sports Journalist Among Those Killed In Plane Crash.&nbsp;Katie Rose Remembers The Past While Celebrating New Year's Eve, Her New Single.&nbsp;Pressley Touts Her Funding fight At New East Boston Health Center.&nbsp;Arkansas Georgia Tech Basketball.&nbsp;
